--- a/applet-2.json
+++ b/applet-2.json
@@ -1,8 +1,8 @@
 [
     {
-        "latitude": 8.359735,
-        "longitude" : 124.869206,
-        "message" : "CSS Faculty Office"
+        "latitude": 8.360238,
+        "longitude" : 124.867470,
+        "message" : "SC building"
     },
       
     {
@@ -12,8 +12,8 @@
     },
 
     {
-        "latitude": 8.359554,
-        "longitude" : 124.869153,
-        "message" : "CSS Laboratory 2"
+        "latitude": 8.359134,
+        "longitude" : 124.868537,
+        "message" : "BA building"
     }
 ]
